Refactor TextRenderer API to minimize overloads
- Trimmed down `TextRenderer` to only two `render` overloads: varargs and `Collection`.
- Removed internal `baseTransform` handling in favor of caller-provided transformations.
- Added `screenToPixel()` helper to `TextRenderer` for projection matrix access.
- Updated over 30 call sites across the codebase to match the new API.
- Fixed compilation errors in UI components (UIItem, ButtonUIContent, LabelContent).
- Added missing Matrix4f imports in multiple files.
- Verified build with 'mvn install' and ran 'TextRendererTest'.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>